Readjusted margins of viewbar and infobar and increased font weight of trail in side-navbar

--- a/src/component/Sidebar/Sidebar.scss
+++ b/src/component/Sidebar/Sidebar.scss
@@ -74,6 +74,7 @@
         }
         .trail{
             margin-bottom: 4%;
+            font-weight: 650;
         }
         .btn{
             width:100%;
