--- a/src/component/ViewBar/ViewBar.scss
+++ b/src/component/ViewBar/ViewBar.scss
@@ -1,6 +1,6 @@
 .view-bar{
     display: flex;
-    background-color: rgb(239, 245, 245);
+    background-color: rgba(222, 247, 247, 0.384);
     margin-top: 1.1rem;
     align-items: center;
     padding-left: 1.2%;
