--- a/src/component/Sidebar/Sidebar.scss
+++ b/src/component/Sidebar/Sidebar.scss
@@ -2,29 +2,68 @@
     height:100%;
     background-color: rgb(242, 250, 250);
     width:30%;
-    min-width:120px;
+    min-width:190px;
     display: flex;
     flex-direction: column;
     align-items:  center;   
     font-family: 'PT Sans', sans-serif;
     max-width: 350px;
+    margin-bottom: 20px;
+
+    @media (max-width: 900px){
+        width:100%;
+        max-width: 100%;
+    }
     .sideNav-header{
-        background-image: radial-gradient(circle at 15.83% 47.01%, #de06dc 0, #c600e2 16.67%, #ab01e8 33.33%, #880ced 50%, #5819f2 66.67%, #0024f7 83.33%, #002dfb 100%);
         background-size: 100%;
-        background-clip: text ;
-        background-clip: icon ;
-        -moz-background-clip: text;
-        -webkit-text-fill-color: transparent; 
-        -moz-text-fill-color: transparent;
         font-size: 1.5rem;
         font-weight: bold;
         margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+
+        .heading{
+            background-image: radial-gradient(circle at 15.83% 47.01%, #de06dc 0, #c600e2 16.67%, #ab01e8 33.33%, #880ced 50%, #5819f2 66.67%, #0024f7 83.33%, #002dfb 100%);
+            background-clip: text ;
+            background-clip: icon ;
+            -moz-background-clip: text;
+            -webkit-text-fill-color: transparent; 
+            -moz-text-fill-color: transparent;       
+        }
+        @media (max-width: 900px){
+            width:100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: 3%;
+            padding: 0 4%;
+
+            .ToggleButton{
+                justify-content: flex-end;
+            }
+        }
 
         svg{
             color: purple;
             width: 2rem;
         }
+        button{
+            @media (max-width: 900px){
+                display: flex;
+            }
+        }
     }
+
+    .navbar-collapse{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width:100%;
+        @media (max-width:900px){
+            width:100%;
+        }
+    }
+
 
     .sideNav-contents{
         color: rgb(58, 57, 57);
@@ -74,6 +113,12 @@
         font-size: 16px;
         text-align: center;
         letter-spacing: 0.5px;
+
+        @media (max-width:900px){
+            margin: 0% 23% 4%;
+            padding: 5% 8%;
+        }
+
         .days-left{
             margin-bottom: 4%;
             color:rgb(27, 87, 253);
