--- a/src/component/Task.js/Task.scss
+++ b/src/component/Task.js/Task.scss
@@ -19,8 +19,19 @@
                 height: 100%;
             }
         }
-       
+    }
 
+    .assigned{
+        max-height: 60px;
+        svg{
+            margin-left: 4%;
+            width:7%;
+            height: 7%;
+            @media (max-width:900px){
+                width:5%;
+                height:5%;
+            }
+        }
     }
 
         .duration{
